fix: correct test cases